--- a/.github/workflows/update-activity.yml
+++ b/.github/workflows/update-activity.yml
@@ -1,26 +1,22 @@
 name: Update Recent Activity
 
-
 on:
   schedule:
-    - cron: '*/60 * * * *' 
-  workflow_dispatch:
+    - cron: '*/30 * * * *' 
+  workflow_dispatch:  
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
 
     steps:
-      
       - uses: actions/checkout@v2
-
-      
-      - uses: jamesgeorge007/github-activity-readme@v1
+      - uses: jamesgeorge007/github-activity-readme@v0.5.0 
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      
-      - name: Commit Changes
+
+      - name: Commit and Push Changes
         run: |
           git config --global user.name 'GitHub Action'
           git config --global user.email 'action@github.com'
