--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,41 +1,27 @@
-name: Generate Snake
+name: Generate Snake Game
 
 on:
   schedule:
-    - cron: "0 0 * * *" 
+    - cron: "* */12 * * *"
   workflow_dispatch:
-  push:
-    branches:
-      - main  
 
 jobs:
   build:
+    name: Jobs to update datas
     runs-on: ubuntu-latest
-
     steps:
-      
-      - uses: actions/checkout@v2
 
-      
-      - uses: Platane/snk@v2
+      - uses: Sutil/snk@master
+        id: snake-gif
         with:
           github_user_name: Tomrm96  
+          svg_out_path: dist/github-contribution-grid-snake2.svg
+          snake_color: 'blue'
 
-      
-      - name: Generate Snake Game from Commits
-        run: |
-          mkdir -p output
-          mv snake.svg output/snake.svg
 
-     
-      - name: Commit and Push Snake Game
-        uses: EndBug/add-and-commit@v7
+      - uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
-          author_name: "GitHub Actions"
-          author_email: "actions@github.com"
-          message: "Generated Snake Game"
-          add: "output/snake.svg"
-
-     
-      - name: Push Changes
-        run: git push
+          target_branch: output
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
