--- a/.github/workflows/update-activity.yml
+++ b/.github/workflows/update-activity.yml
@@ -1,25 +1,17 @@
-name: Update Recent Activity
-
+name: Update README
 on:
   schedule:
-    - cron: '*/30 * * * *' 
-  workflow_dispatch:  
-
+    - cron: "*/30 * * * *"
+  workflow_dispatch:
 jobs:
-  update-readme:
+  build:
+    name: Update this repo's README with recent activity
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: jamesgeorge007/github-activity-readme@v0.5.0 
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-
-      - name: Commit and Push Changes
-        run: |
-          git config --global user.name 'GitHub Action'
-          git config --global user.email 'action@github.com'
-          git add README.md
-          git commit -m "Updated recent activity"
-          git push
+      - uses: actions/checkout@v3
+      - uses: jamesgeorge007/github-activity-readme@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
