--- a/.github/workflows/update-activity.yml
+++ b/.github/workflows/update-activity.yml
@@ -1,16 +1,19 @@
-name: Update README
+name: GitHub activity feed to README
 
 on:
   schedule:
-    - cron: '*/30 * * * *'
-  workflow_dispatch:
+    - cron: '* */2 * * *' # 30 minus to probably too much for API ratelimits
 
 jobs:
-  build:
+  generate-feed:
     runs-on: ubuntu-latest
+    name: Generate feed
 
     steps:
       - uses: actions/checkout@v2
-      - uses: jamesgeorge007/github-activity-readme@master
+
+      # Pin the version to the latest stable version.
+      # If you want to live on edge, use 'master' branch.
+      - uses: RecapTime/github-activity-readme@master
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
